syntax = "proto3";

package rs.tokio.console.instrument;

import "google/protobuf/timestamp/timestamp.proto";
import "common.proto";
import "tasks.proto";
import "resources.proto";
import "async_ops.proto";
import "resource_ops.proto";

service Instrument {
    rpc WatchUpdates(InstrumentRequest) returns (stream InstrumentUpdate) {}
    rpc WatchTaskDetails(TaskDetailsRequest) returns (stream tasks.TaskDetails) {}
}

message  InstrumentRequest{
}

message TaskDetailsRequest {
    common.SpanId id = 1;
}

message InstrumentUpdate {
    // The system time when this update was recorded.
    //
    // This is the timestamp any durations in the included `Stats` were
    // calculated relative to.
    google.protobuf.Timestamp now = 1;

    // Task state update.
    tasks.TaskUpdate task_update = 2;

    // Resource state update.
    resources.ResourceUpdate resource_update = 3;

    // Async operations state update
    async_ops.AsyncOpUpdate async_op_update = 4;

    // Resource operations state update
    resource_ops.ResourceOpUpdate resource_op_update = 5;

    // Any new span metadata that was registered since the last update.
    common.RegisterMetadata new_metadata = 6;
}
